--- a/GetHired/GetHired.DataModels/App.config
+++ b/GetHired/GetHired.DataModels/App.config
@@ -11,8 +11,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BlogContext"
+    <add name="GetHired"
          providerName="System.Data.SqlClient"
-         connectionString="Server=.\SQLEXPRESS;Database=Blogging;Integrated Security=True;"/>
+         connectionString="Server=.\SQLEXPRESS;Database=GetHired;Integrated Security=True;"/>
   </connectionStrings>
 </configuration>
