--- a/GetHired/GetHired.DomainModels/GetHired.DomainModels.csproj
+++ b/GetHired/GetHired.DomainModels/GetHired.DomainModels.csproj
@@ -52,17 +52,15 @@
     <Compile Include="Address.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="Contact.cs" />
-    <Compile Include="Enums\JobCategory.cs" />
-    <Compile Include="Enums\JobType.cs" />
     <Compile Include="Enums\Role.cs" />
     <Compile Include="JobOffer.cs" />
     <Compile Include="Town.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\JobCategory.cs" />
+    <Compile Include="Utilities\JobType.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
