--- a/GetHired/GetHired.Core/GetHired.Core.csproj
+++ b/GetHired/GetHired.Core/GetHired.Core.csproj
@@ -48,11 +48,15 @@
     <Compile Include="Factories\Contracts\ICommandFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CommandParser.cs" />
+    <Compile Include="Providers\CommandProcessor.cs" />
+    <Compile Include="Providers\ConsoleReader.cs" />
+    <Compile Include="Providers\ConsoleWriter.cs" />
     <Compile Include="Providers\Contracts\ICommandParser.cs" />
     <Compile Include="Providers\Contracts\ICommandProcessor.cs" />
     <Compile Include="Providers\Contracts\IEngine.cs" />
     <Compile Include="Providers\Contracts\IReader.cs" />
     <Compile Include="Providers\Contracts\IWriter.cs" />
+    <Compile Include="Providers\Engine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
