--- a/GetHired/GetHired.DataModels/App.config
+++ b/GetHired/GetHired.DataModels/App.config
@@ -10,9 +10,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  
+  <!--<connectionStrings>
     <add name="GetHired"
          providerName="System.Data.SqlClient"
          connectionString="Server=.\SQLEXPRESS;Database=GetHired;Integrated Security=True;"/>
+  </connectionStrings>-->
+
+  <connectionStrings>
+    <add name="GetHired"
+         providerName="System.Data.SqlClient"
+         connectionString="Server=.\SqlServer;Database=GetHired;Integrated Security=True;"/>
   </connectionStrings>
+  
 </configuration>
