AuthenticationHandler Login Logout implemented, Guard removed, IdentityProvider removed

--- a/GetHired/GetHired.Core/GetHired.Core.csproj
+++ b/GetHired/GetHired.Core/GetHired.Core.csproj
@@ -30,9 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bytes2you.Validation, Version=2.0.0.0, Culture=neutral, PublicKeyToken=a7d501dd757e0442, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bytes2you.Validation.2.0.0.0\lib\portable-win+net40+sl40+wp+Xbox40\Bytes2you.Validation.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.TeamFoundation.TestManagement.Client, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -44,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authentication\Contracts\IdentityProvider.cs" />
-    <Compile Include="Authentication\Contracts\IIdentityProvider.cs" />
+    <Compile Include="Authentication\Providers\AuthorizationHandler.cs" />
+    <Compile Include="Authentication\Contracts\IAuthorizationHandler.cs" />
     <Compile Include="Authentication\Providers\AuthenticationHadler.cs" />
     <Compile Include="Authentication\Contracts\IAuthenticationHadler.cs" />
     <Compile Include="Commands\Contracts\ICommand.cs" />
@@ -66,12 +64,13 @@
     <Compile Include="Providers\PasswordHashGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\GetHired.DataModels\GetHired.DataModels.csproj">
       <Project>{E7A3FF23-95AC-4C7A-AB7C-36C93E2568C2}</Project>
       <Name>GetHired.DataModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GetHired.DomainModels\GetHired.DomainModels.csproj">
+      <Project>{CD3237F3-97CE-428B-A4B1-85E567E7DAD6}</Project>
+      <Name>GetHired.DomainModels</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
