--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Migrations\201803171150180_RemoveCascadeDelete.Designer.cs">
       <DependentUpon>201803171150180_RemoveCascadeDelete.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803171528234_UniqueUsernameAdded.cs" />
+    <Compile Include="Migrations\201803171528234_UniqueUsernameAdded.Designer.cs">
+      <DependentUpon>201803171528234_UniqueUsernameAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Contracts\IReadonlyRepository.cs" />
@@ -90,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803171150180_RemoveCascadeDelete.resx">
       <DependentUpon>201803171150180_RemoveCascadeDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803171528234_UniqueUsernameAdded.resx">
+      <DependentUpon>201803171528234_UniqueUsernameAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
