--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -67,6 +67,18 @@
     <Compile Include="Migrations\201803171528234_UniqueUsernameAdded.Designer.cs">
       <DependentUpon>201803171528234_UniqueUsernameAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803180850435_OneToOneOrZeroFixes.cs" />
+    <Compile Include="Migrations\201803180850435_OneToOneOrZeroFixes.Designer.cs">
+      <DependentUpon>201803180850435_OneToOneOrZeroFixes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803191120014_RelationshipsFixes.cs" />
+    <Compile Include="Migrations\201803191120014_RelationshipsFixes.Designer.cs">
+      <DependentUpon>201803191120014_RelationshipsFixes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803191140474_Test.cs" />
+    <Compile Include="Migrations\201803191140474_Test.Designer.cs">
+      <DependentUpon>201803191140474_Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Contracts\IReadonlyRepository.cs" />
@@ -97,6 +109,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803171528234_UniqueUsernameAdded.resx">
       <DependentUpon>201803171528234_UniqueUsernameAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803180850435_OneToOneOrZeroFixes.resx">
+      <DependentUpon>201803180850435_OneToOneOrZeroFixes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803191120014_RelationshipsFixes.resx">
+      <DependentUpon>201803191120014_RelationshipsFixes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803191140474_Test.resx">
+      <DependentUpon>201803191140474_Test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
