--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201803191716378_Initial.Designer.cs">
       <DependentUpon>201803191716378_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803201100003_RemovedPasswordEntity.cs" />
+    <Compile Include="Migrations\201803201100003_RemovedPasswordEntity.Designer.cs">
+      <DependentUpon>201803201100003_RemovedPasswordEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Contracts\IReadonlyRepository.cs" />
@@ -75,6 +79,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201803191716378_Initial.resx">
       <DependentUpon>201803191716378_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803201100003_RemovedPasswordEntity.resx">
+      <DependentUpon>201803201100003_RemovedPasswordEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
