--- a/GetHired/GetHired.Services/GetHired.Services.csproj
+++ b/GetHired/GetHired.Services/GetHired.Services.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9E3CFC76-3EE6-44DE-A632-788A7F6FF5B6}</ProjectGuid>
+    <ProjectGuid>{E59D5F5A-0D55-4FE1-A044-765FD6B2FF24}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GetHired.Core</RootNamespace>
-    <AssemblyName>GetHired.Core</AssemblyName>
+    <RootNamespace>GetHired.Services</RootNamespace>
+    <AssemblyName>GetHired.Services</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,9 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.TeamFoundation.TestManagement.Client, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,30 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Providers\AuthorizationHandler.cs" />
-    <Compile Include="Commands\Contracts\ICommand.cs" />
-    <Compile Include="Factories\CommandFactory.cs" />
-    <Compile Include="Factories\Contracts\ICommandFactory.cs" />
+    <Compile Include="Contracts\IAuthenticationService.cs" />
+    <Compile Include="IPasswordHashGenerator.cs" />
+    <Compile Include="PasswordHashGenerator.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\CommandParser.cs" />
-    <Compile Include="Providers\CommandProcessor.cs" />
-    <Compile Include="Providers\ConsoleReader.cs" />
-    <Compile Include="Providers\ConsoleWriter.cs" />
-    <Compile Include="Providers\Contracts\IAuthorizationHandler.cs" />
-    <Compile Include="Providers\Contracts\ICommandParser.cs" />
-    <Compile Include="Providers\Contracts\ICommandProcessor.cs" />
-    <Compile Include="Providers\Contracts\IEngine.cs" />
-    <Compile Include="Providers\Contracts\IReader.cs" />
-    <Compile Include="Providers\Contracts\IWriter.cs" />
-    <Compile Include="Providers\Engine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GetHired.DataModels\GetHired.DataModels.csproj">
-      <Project>{E7A3FF23-95AC-4C7A-AB7C-36C93E2568C2}</Project>
+      <Project>{e7a3ff23-95ac-4c7a-ab7c-36c93e2568c2}</Project>
       <Name>GetHired.DataModels</Name>
     </ProjectReference>
     <ProjectReference Include="..\GetHired.DomainModels\GetHired.DomainModels.csproj">
-      <Project>{CD3237F3-97CE-428B-A4B1-85E567E7DAD6}</Project>
+      <Project>{cd3237f3-97ce-428b-a4b1-85e567e7dad6}</Project>
       <Name>GetHired.DomainModels</Name>
     </ProjectReference>
   </ItemGroup>
