--- a/GetHired/GetHired.DTO/GetHired.DTO.csproj
+++ b/GetHired/GetHired.DTO/GetHired.DTO.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E59D5F5A-0D55-4FE1-A044-765FD6B2FF24}</ProjectGuid>
+    <ProjectGuid>{216D4B48-6920-40F3-8386-AEE6F03208FB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GetHired.Services</RootNamespace>
-    <AssemblyName>GetHired.Services</AssemblyName>
+    <RootNamespace>GetHired.DTO</RootNamespace>
+    <AssemblyName>GetHired.DTO</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,21 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IAuthenticationService.cs" />
-    <Compile Include="Contracts\IPasswordHashGenerator.cs" />
-    <Compile Include="PasswordHashGenerator.cs" />
-    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="AddressModel.cs" />
+    <Compile Include="CompanyModel.cs" />
+    <Compile Include="ContactInfoModel.cs" />
+    <Compile Include="JobCategoryModel.cs" />
+    <Compile Include="JobOfferModel.cs" />
+    <Compile Include="JobTypeModel.cs" />
+    <Compile Include="TownModel.cs" />
+    <Compile Include="UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GetHired.DataModels\GetHired.DataModels.csproj">
-      <Project>{e7a3ff23-95ac-4c7a-ab7c-36c93e2568c2}</Project>
-      <Name>GetHired.DataModels</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GetHired.DomainModels\GetHired.DomainModels.csproj">
-      <Project>{cd3237f3-97ce-428b-a4b1-85e567e7dad6}</Project>
-      <Name>GetHired.DomainModels</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
