--- a/GetHired/GetHired.Services/GetHired.Services.csproj
+++ b/GetHired/GetHired.Services/GetHired.Services.csproj
@@ -43,9 +43,11 @@
   <ItemGroup>
     <Compile Include="Contracts\IAuthenticationService.cs" />
     <Compile Include="Contracts\IPasswordHashGenerator.cs" />
+    <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="PasswordHashGenerator.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GetHired.DataModels\GetHired.DataModels.csproj">
