--- a/GetHired/GetHired.ConsoleClient/GetHired.ConsoleClient.csproj
+++ b/GetHired/GetHired.ConsoleClient/GetHired.ConsoleClient.csproj
@@ -70,6 +70,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GetHired.Common\GetHired.Common.csproj">
+      <Project>{F77F51D7-DE4C-4087-9CBA-57A32265CB15}</Project>
+      <Name>GetHired.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GetHired.Core\GetHired.Core.csproj">
       <Project>{9E3CFC76-3EE6-44DE-A632-788A7F6FF5B6}</Project>
       <Name>GetHired.Core</Name>
