--- a/GetHired/GetHired.Core/GetHired.Core.csproj
+++ b/GetHired/GetHired.Core/GetHired.Core.csproj
@@ -33,6 +33,9 @@
     <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="Bytes2you.Validation, Version=2.0.0.0, Culture=neutral, PublicKeyToken=a7d501dd757e0442, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bytes2you.Validation.2.0.0.0\lib\portable-win+net40+sl40+wp+Xbox40\Bytes2you.Validation.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.TeamFoundation.TestManagement.Client, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -49,6 +52,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\AddJobOffer.cs" />
+    <Compile Include="Commands\DeleteJobOffer.cs" />
+    <Compile Include="Commands\Help.cs" />
+    <Compile Include="Commands\ShowAllJobOffers.cs" />
     <Compile Include="Engine\Contracts\IEngine.cs" />
     <Compile Include="Engine\Engine.cs" />
     <Compile Include="Providers\AuthorizationHandler.cs" />
@@ -63,10 +70,8 @@
     <Compile Include="Providers\Contracts\IAuthorizationHandler.cs" />
     <Compile Include="Providers\Contracts\ICommandParser.cs" />
     <Compile Include="Providers\Contracts\ICommandProcessor.cs" />
-    <Compile Include="Providers\Contracts\IEngine.cs" />
     <Compile Include="Providers\Contracts\IReader.cs" />
     <Compile Include="Providers\Contracts\IWriter.cs" />
-    <Compile Include="Providers\Engine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GetHired.DataModels\GetHired.DataModels.csproj">
