--- a/GetHired/GetHired.Core/GetHired.Core.csproj
+++ b/GetHired/GetHired.Core/GetHired.Core.csproj
@@ -61,21 +61,21 @@
     <Compile Include="Commands\ShowAllJobOffers.cs" />
     <Compile Include="Engine\Contracts\IEngine.cs" />
     <Compile Include="Engine\Engine.cs" />
-    <Compile Include="Providers\AuthorizationHandler.cs" />
     <Compile Include="Commands\Contracts\ICommand.cs" />
     <Compile Include="Factories\CommandFactory.cs" />
     <Compile Include="Factories\Contracts\ICommandFactory.cs" />
+    <Compile Include="Providers\PasswordHashGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CommandParser.cs" />
     <Compile Include="Providers\CommandProcessor.cs" />
     <Compile Include="Providers\ConsoleReader.cs" />
     <Compile Include="Providers\ConsoleWriter.cs" />
-    <Compile Include="Providers\Contracts\IAuthorizationHandler.cs" />
     <Compile Include="Providers\Contracts\ICommandParser.cs" />
     <Compile Include="Providers\Contracts\ICommandProcessor.cs" />
     <Compile Include="Providers\Contracts\IFileReader.cs" />
     <Compile Include="Providers\Contracts\IReader.cs" />
     <Compile Include="Providers\Contracts\IWriter.cs" />
+    <Compile Include="Providers\Contracts\IPasswordHashGenerator.cs" />
     <Compile Include="Providers\JSONReader.cs" />
   </ItemGroup>
   <ItemGroup>
