--- a/GetHired/GetHired.ConsoleClient/App.config
+++ b/GetHired/GetHired.ConsoleClient/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=GetHired3;Integrated Security=True;" />
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SqlServer;Database=GetHired3;Integrated Security=True;" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
