--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -38,14 +38,7 @@
     </Reference>
     <Reference Include="Microsoft.TeamFoundation.TestManagement.Client, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configurations\Contracts\IFluentConfiguration.cs" />
@@ -73,7 +66,7 @@
     <Compile Include="Repositories\Contracts\ICompanyRepository.cs" />
     <Compile Include="Repositories\Contracts\IJobOfferRepository.cs" />
     <Compile Include="Repositories\Contracts\IReadonlyRepository.cs" />
-    <Compile Include="Repositories\Contracts\IRepository.cs" />
+    <Compile Include="Repositories\Contracts\IGenericRepository.cs" />
     <Compile Include="Repositories\Contracts\ITownRepository.cs" />
     <Compile Include="Repositories\Contracts\IWriteonlyRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
