--- a/GetHired/GetHired.ConsoleClient/App.config
+++ b/GetHired/GetHired.ConsoleClient/App.config
@@ -8,8 +8,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SqlServer;Database=GetHired;Integrated Security=True;" />
+  </connectionStrings>-->
+
+  <connectionStrings>
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=GetHired5;Integrated Security=True;" />
   </connectionStrings>
   
   <entityFramework>
