--- a/GetHired/GetHired.ConsoleClient/GetHired.ConsoleClient.csproj
+++ b/GetHired/GetHired.ConsoleClient/GetHired.ConsoleClient.csproj
@@ -69,7 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeroicMapperConfig\AutoMapperConfig.cs" />
+    <Compile Include="HeroicAutoMapperConfig\AutoMapperConfig.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -101,5 +101,6 @@
       <Name>GetHired.Services</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
