--- a/GetHired/GetHired.Services/GetHired.Services.csproj
+++ b/GetHired/GetHired.Services/GetHired.Services.csproj
@@ -46,8 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IJobOfferService.cs" />
-    <Compile Include="Contracts\IUserService.cs" />
+    <Compile Include="IPasswordHashGenerator.cs" />
+    <Compile Include="PasswordHashGenerator.cs" />
     <Compile Include="Services\AddressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CompanyService.cs" />
@@ -72,6 +72,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
