--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -160,7 +160,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AddressController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JobOfferController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -207,6 +209,8 @@
     <Content Include="Views\Address\Create.cshtml" />
     <Content Include="Views\City\Index.cshtml" />
     <Content Include="Views\Address\Index.cshtml" />
+    <Content Include="Views\JobOffer\Index.cshtml" />
+    <Content Include="Views\Company\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
